# django_semantic_network

./: .gitignore  .pre-commit-config.yaml  manage.py  pyproject.toml
.agents/rules/: graphdb.md  llm-interactions.md  test-tools.md  vector-db.md
django_lightrag/: apps.py  core.py  entity_extraction.py  graph_builder.py  models.py  query_engine.py  schemas.py  storage.py  urls.py  views.py
django_lightrag/management/commands/: ingest.py  init_graph.py  seed.py  validate_graph.py
django_lightrag/migrations/: 0001_initial.py  0002_remove_conceptschemerecord.py
django_lightrag/tests/: conftest.py  test_entity_extraction.py  test_views.py
django_semantic_network/: apps.py  core.py  dspy_runtime.py  entity_extraction.py  graph_builder.py  ladybug_viz_proxy.py  ladybug_viz_urls.py  llm_schemas.py  llm_signatures.py  models.py  prompts.py  query_engine.py  schemas.py  storage.py  views.py
django_semantic_network/management/commands/: ingest.py  ingest_file.py  init_graph.py  seed.py  validate_graph.py
django_semantic_network/migrations/: 0001_initial.py  0002_remove_conceptschemerecord.py
django_semantic_network/tests/: conftest.py  test_chromadb_viz_integration.py  test_dspy_signatures.py  test_entity_extraction.py  test_ingest_file_command.py  test_ladybug_viz_integration.py  test_views.py
kb_project/: asgi.py  settings.py  urls.py  wsgi.py
tui/: app.py  client.py
